fix spacing for div boxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1469,7 +1469,7 @@ margin-top: 6em;
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  padding-top: 1em;
+  padding-top: 1.5em;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
