--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -1,7 +1,7 @@
 .home-subheader {
   border: 1px solid #D0D0D0;
   height: 400px;
-  padding: 2.5em;
+  padding: 2em;
   text-align: center;
   margin-top: 1em;
   background-color: #fff;
@@ -12,7 +12,7 @@
   color: #004b7e;
   font-family: "Open Sans";
   font-weight: 300;
-  margin-top: 1.75em;
+  margin-top: 1.1em;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
@@ -23,8 +23,7 @@
   font-family: "Open Sans";
   font-weight: 100;
   font-size: .9em;
-  margin-top: 2em;
-  margin-bottom: 1em;
+  margin-top: 3em;
 }
 
 
